@@ -1,20 +1,19 @@
 package com.SwitchBoard.AuthService.Util;
 
-import com.SwitchBoard.AuthService.DTO.USER_ROLE;
-import io.jsonwebtoken.Claims;
+import com.SwitchBoard.AuthService.DTO.Account.USER_ROLE;
 import io.jsonwebtoken.Jwts;
 import io.jsonwebtoken.SignatureAlgorithm;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.core.io.ClassPathResource;
 import org.springframework.stereotype.Component;
 
+import java.io.InputStream;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 import java.security.KeyFactory;
 import java.security.PrivateKey;
-import java.security.PublicKey;
 import java.security.spec.PKCS8EncodedKeySpec;
-import java.security.spec.X509EncodedKeySpec;
 import java.util.Base64;
 import java.util.Date;
 import java.util.List;
@@ -32,20 +31,17 @@ public class JwtUtil {
     @Value("${jwt.expiration}")
     private long jwtExpiration;
 
-    /** Load Private Key from file */
     private PrivateKey getPrivateKey() throws Exception {
-        log.debug("JwtUtil : getPrivateKey : Loading private key from path - {}", privateKeyPath);
-        try {
-            byte[] keyBytes = Files.readAllBytes(Paths.get(privateKeyPath));
+        log.debug("JwtUtil : getPrivateKey : Loading private key from classpath - {}", privateKeyPath);
+        try (InputStream inputStream = new ClassPathResource(privateKeyPath).getInputStream()) {
+            byte[] keyBytes = inputStream.readAllBytes();
             String key = new String(keyBytes)
                     .replace("-----BEGIN PRIVATE KEY-----", "")
                     .replace("-----END PRIVATE KEY-----", "")
                     .replaceAll("\\s+", "");
             byte[] decoded = Base64.getDecoder().decode(key);
             PKCS8EncodedKeySpec keySpec = new PKCS8EncodedKeySpec(decoded);
-            PrivateKey privateKey = KeyFactory.getInstance("RSA").generatePrivate(keySpec);
-            log.debug("JwtUtil : getPrivateKey : Private key loaded successfully");
-            return privateKey;
+            return KeyFactory.getInstance("RSA").generatePrivate(keySpec);
         } catch (Exception e) {
             log.error("JwtUtil : getPrivateKey : Error loading private key - {}", e.getMessage());
             throw e;
